Update storing MongoDB example